--- a/index.html
+++ b/index.html
@@ -4,8 +4,13 @@
     <meta name="viewport" width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0>
     <style> body {padding: 0; margin: 0;} </style>
     <script src="lib/p5.min.js"></script>
+	<script src="cell.js"></script>
+	<script src="board.js"></script>
+	<script src="gameinfo.js"></script>
+	<script src="processor.js"></script>
+	<script src="board_ui.js"></script>
+	<script src="main_ui.js"></script>
     <script src="sketch.js"></script>
-	
   </head>
   <body>
   </body>
