--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <style> body {padding: 0; margin: 0;} </style>
     <script src="lib/p5.min.js"></script>
 	<script src="cell.js"></script>
+	<script src="player.js"></script>
 	<script src="board.js"></script>
 	<script src="gameinfo.js"></script>
 	<script src="processor.js"></script>
