--- a/index.html
+++ b/index.html
@@ -7,8 +7,13 @@
 	<script src="cell.js"></script>
 	<script src="player.js"></script>
 	<script src="board.js"></script>
+	
 	<script src="gameinfo.js"></script>
 	<script src="processor.js"></script>
+	
+	<script src="dicepane_ui.js"></script>
+	<script src="button_ui.js"></script>
+	<script src="pane_ui.js"></script>
 	<script src="board_ui.js"></script>
 	<script src="main_ui.js"></script>
     <script src="sketch.js"></script>
