--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 	<script src="gameinfo.js"></script>
 	<script src="processor.js"></script>
 	
+	<script src="playerpane_ui.js"></script>
 	<script src="dicepane_ui.js"></script>
 	<script src="button_ui.js"></script>
 	<script src="pane_ui.js"></script>
