new year's commit

--- a/index.html
+++ b/index.html
@@ -8,6 +8,18 @@
 	<script src="player.js"></script>
 	<script src="board.js"></script>
 	
+	<!-- runes -->
+	<script src="runes/rune_luck.js"></script>
+	<script src="runes/rune_unluck.js"></script>
+	<script src="runes/rune_gateway.js"></script>
+	<script src="runes/rune_move1.js"></script>
+	<script src="runes/rune_move2.js"></script>
+	<script src="runes/rune_move3.js"></script>
+	<script src="runes/rune_jump1.js"></script>
+	<script src="runes/rune_jump2.js"></script>
+	<script src="runes/rune_jump3.js"></script>
+	<!-- end runes -->
+	
 	<script src="gameinfo.js"></script>
 	<script src="processor.js"></script>
 	
