--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 	<script src="processor.js"></script>
 	
 	<script src="getrunepane_ui.js"></script>
+	<script src="slotpane_ui.js"></script>
 	<script src="inventorypane_ui.js"></script>
 	<script src="playerpane_ui.js"></script>
 	<script src="dicepane_ui.js"></script>
